[package]
name = "liter"
version = "0.0.2"
edition = "2021"
authors = ["xaos <xaos@xaos.tech>"]
license = "GPL-3.0-or-later"
repository = "https://git.sr.ht/~xaos/liter"
description = "WIP"
documentation = "https://docs.rs/liter"
keywords = ["sqlite", "storage", "schema"]
categories = ["database"]

[dependencies]
liter_derive = "0.0.2"
rusqlite = "0.29"
construe = "0.0.3"
